# conventional-commits-parser

./: CHANGELOG.md  Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
conventional_commits_parser/: all.html  index.html
src/: lib.rs  parser.rs
src/conventional_commits_parser/: lib.rs.html
tests/: .editorconfig  .gitignore  body_no_footer.txt  body_no_footer2.txt
tests/serialized/: commit_body_footer_newline.ron  commit_body_footer_newline.txt  commit_body_footer_no_newline.ron  commit_body_footer_no_newline.txt  commit_body_no_footer.ron  commit_body_no_footer.txt  commit_no_body.ron  commit_no_body.txt  commit_no_body_breaking.ron  commit_no_body_breaking.txt  readme.md
