[package]
name = "conventional-commits-parser"
description = "A parser for the conventional commits specification"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
conventional-commits-types = "0.2.1"
nom = "5.1.2"
nom-unicode = "0.1.0"

[dev-dependencies]
anyhow = "1.0.32"
pretty_assertions = "0.6.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
ron = "0.6.0"
walkdir = "2.3.1"

[features]
serde = ["conventional-commits-types/serde"]

[patch.crates-io]
#conventional-commits-types = { path = "../conventional-commits-types" }
nom-unicode = { path = "../../rust/contrib/rust-nom-unicode" }
