[package]
name = "conventional-commits-parser"
description = "A parser for the conventional commits specification"
version = "0.1.1"
homepage = "https://github.com/conventional-commits-rs/conventional-commits-parser"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/conventional-commits-parser"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"
exclude = ["tests/x"]

[dependencies]
conventional-commits-types = "0.2.1"
nom = "5.1.2"
nom-unicode = "0.1.0"

[dev-dependencies]
anyhow = "1.0.32"
pretty_assertions = "0.6.1"
quickcheck = "0.9.2"
quickcheck_macros = "1.0.0"
ron = "0.6.0"
walkdir = "2.3.1"

[features]
serde = ["conventional-commits-types/serde"]
