[package]
name = "conventional-commits-parser"
description = "A parser for the conventional commits specification"
version = "0.1.1"
homepage = "https://github.com/conventional-commits-rs/conventional-commits-parser"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/conventional-commits-parser"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"
exclude = ["tests/x"]

[dependencies]
conventional-commits-types = "0.2.2"
nom = "6.1.0"
nom-unicode = "0.2.0"

[dev-dependencies]
anyhow = "1.0.38"
pretty_assertions = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
ron = "0.6.4"
walkdir = "2.3.1"

[features]
serde = ["conventional-commits-types/serde"]

[patch.crates-io]
nom-unicode = {git = "https://github.com/SirWindfield/rust-nom-unicode", branch = "main"}